[gd_scene load_steps=9 format=3 uid="uid://bucc4wcdtko8b"]

[ext_resource type="Texture2D" uid="uid://dp2u160befthp" path="res://3/assets/player/parrot.png" id="1_dxldh"]
[ext_resource type="Script" uid="uid://1x2ttc5e5gud" path="res://3/Scences/Animal/animal.gd" id="1_xqgso"]
[ext_resource type="Texture2D" uid="uid://o7e47y8gyf6q" path="res://3/assets/items/arrow.png" id="2_umcmp"]
[ext_resource type="AudioStream" uid="uid://cwv1y30qun3v8" path="res://3/assets/audio/kick_wood.ogg" id="4_a5juf"]
[ext_resource type="AudioStream" uid="uid://dppwq4fvf3aso" path="res://3/assets/audio/stretch2.ogg" id="4_utcxk"]
[ext_resource type="AudioStream" uid="uid://1o5d5lsnc6b5" path="res://3/assets/audio/catapult.ogg" id="6_0n48l"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_umcmp"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_umcmp"]
radius = 20.0

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_umcmp")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_xqgso")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_dxldh")

[node name="arrow" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_umcmp")
offset = Vector2(150, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_umcmp")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Kick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_a5juf")
volume_db = -17.719

[node name="Stretch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_utcxk")
volume_db = -17.884

[node name="Launch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_0n48l")
volume_db = -17.719

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
